--- a/ShoeShopProject/Views/ProductManage/SliderManageList.cshtml
+++ b/ShoeShopProject/Views/ProductManage/SliderManageList.cshtml
@@ -37,6 +37,7 @@
                                 </div>
                                 <div class="col-12 col-xl-auto mb-3">
                                     <button class="btn btn-outline-primary" data-bs-toggle="modal" onclick="ClearPayment()" data-bs-target="#addPaymentModal"><i class="me-1" data-feather="plus-square"></i>Thêm liên hệ mới</button>
+
                                     <!-- Modal-->
                                     <div class="modal fade" id="addPaymentModal" tabindex="-1" role="dialog" aria-labelledby="addPaymentModalTitle" aria-hidden="true">
                                         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -48,20 +49,20 @@
                                                 <div class="modal-body">
                                                     <div class="row p-3">
 
-                                                        <label class="small fw-bold" for="addPayMethod">Tên liên hệ</label>
-                                                        <input class="form-control mb-2" type="text" id="addPayMethod" value="" />
+                                                        <label class="small fw-bold" for="addContactName">Tên liên hệ</label>
+                                                        <input class="form-control mb-2" type="text" id="addContactName" value="" />
 
-                                                        <label class="small fw-bold" for="addPayDesc">Mô tả</label>
-                                                        <textarea class="form-control mb-2" id="addPayDesc"></textarea>
+                                                        <label class="small fw-bold" for="addContactDesc">Mô tả</label>
+                                                        <textarea class="form-control mb-2" id="addContactDesc"></textarea>
 
                                                         <img class="mb-2" style="max-width: 250px; max-height: 450px; object-fit: contain;" id="addPayViewImg" src="" alt="" />
                                                         <input type="file" class="form-control" style="display: none;" id="addPayImg" accept="image/*">
-                                                        <button class="btn btn-primary" onclick="UploadImage(1)" type="button">Tải lên ảnh mới</button>
+                                                        <button class="btn btn-primary" onclick="UploadImage(1)" type="button" style="display:none;">Tải lên ảnh mới</button>
 
                                                     </div>
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button class="btn btn-primary" type="button" onclick="AddPayment()">Thêm mới</button>
+                                                    <button class="btn btn-primary" type="button" onclick="AddContact()">Thêm mới</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -111,7 +112,7 @@
                                                 <tr>
                                                     <th colspan="3">Liên hệ</th>
                                                     <th colspan="4">Mô tả</th>
-                                                    <th colspan="4">Hình ảnh</th>
+@*                                                     <th colspan="4">Hình ảnh</th> *@
                                                     <th colspan="2">Actions</th>
                                                 </tr>
                                             </thead>
@@ -123,13 +124,44 @@
                                                         <tr>
                                                             <td colspan="3" class="align-middle">@contact.ContactName</td>
                                                             <td colspan="4" class="align-middle"><a class="text-decoration-none" href="@contact.ContactDescription" target="_blank">@contact.ContactDescription</a></td>
-                                                            <td colspan="4">
+@*                                                             <td colspan="4">
                                                                 <div class="d-flex align-items-center">
                                                                     <img style="max-width: 350px; max-height: 350px; object-fit: contain;" src="@contact.ImageUrl" />
                                                                 </div>
-                                                            </td>
+                                                            </td> *@
                                                             <td colspan="2" class="align-middle">
-                                                                <button class="btn btn-datatable btn-icon btn-transparent-dark me-2" onclick="UpdateContact()"><i data-feather="edit"></i></button>
+                                                                @* <button class="btn btn-datatable btn-icon btn-transparent-dark me-2" onclick="ClearPayment()"><i data-feather="edit"></i></button> *@
+                                                                <button class="btn btn-datatable btn-icon btn-transparent-dark me-2" data-bs-toggle="modal" data-bs-target="#updateContactModal"><i data-feather="edit"></i></button>
+                                                                
+                                                                <!-- Modal-->
+                                                                <div class="modal fade" id="updateContactModal" tabindex="-1" role="dialog" aria-labelledby="updateContactModalTitle" aria-hidden="true">
+                                                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                                                        <div class="modal-content">
+                                                                            <div class="modal-header">
+                                                                                <h5 class="modal-title" id="updateContactModalTitle">Sửa liên hệ</h5>
+                                                                                <button class="btn-close" type="button" data-bs-dismiss="modal" onclick="Clear()" aria-label="Close"></button>
+                                                                            </div>
+                                                                            <div class="modal-body">
+                                                                                <div class="row p-3">
+
+                                                                                    <label class="small fw-bold" for="contactMethod">Tên liên hệ</label>
+                                                                                    <input class="form-control mb-2" type="text" id="contactMethod" value="" />
+
+                                                                                    <label class="small fw-bold" for="contactDesc">Mô tả</label>
+                                                                                    <textarea class="form-control mb-2" id="contactDesc"></textarea>
+
+                                                                                    <img class="mb-2" style="max-width: 250px; max-height: 450px; object-fit: contain;" id="addPayViewImg" src="" alt="" />
+                                                                                    <input type="file" class="form-control" style="display: none;" id="contactImg" accept="image/*">
+                                                                                    <button class="btn btn-primary" onclick="UploadImage(1)" type="button" style="display:none;">Tải lên ảnh mới</button>
+
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="modal-footer">
+                                                                                <button class="btn btn-primary" type="button" onclick="prepareUpdateContact('@contact.Id')">Sửa</button>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
                                                                 <button class="btn btn-datatable btn-icon btn-transparent-dark" onclick="DeleteContact('@contact.Id')"><i data-feather="trash-2"></i></button>
                                                             </td>
                                                         </tr>
@@ -214,6 +246,108 @@
 
             }
         });
+
+        function AddContact() {
+            const contactMethod = document.getElementById('addContactName').value;
+            const contactDesc = document.getElementById('addContactDesc').value;
+            const fileInputImageAdd = $('#addPayImg')[0].files[0];
+
+
+            var formData = new FormData();
+            formData.append('contactMethod', contactMethod);
+            formData.append('contactDesc', contactDesc);
+
+            if (fileInputImageAdd) {
+                formData.append('paymentImg', fileInputImageAdd);
+            }
+
+            $.ajax({
+                url: "/AdminManage/AddContactMethod",
+                type: "POST",
+                data: formData,
+                processData: false,
+                contentType: false,
+                success: async function (data) {
+                    if (data.success) {
+                        await showAlert('Thêm phương thức liên hệ thành công', 'success');
+                        setTimeout(function () {
+                            window.location.reload();
+                        }, 1500);
+                    } else {
+                        await showAlert("Không thể thêm, vui lòng thử lại.", 'warning');
+                    }
+                },
+                error: async function (xhr, status, error) {
+                    await showAlert("Error", 'error');
+                }
+            });
+        }
+
+
+        function prepareUpdateContact(id) {
+            var contactMethod = document.getElementById('contactMethod').value;
+            var contactDesc = document.getElementById('contactDesc').value;
+            var contactImg = document.getElementById('contactImg').files[0];
+
+            UpdateContact(id, contactMethod, contactDesc, contactImg);
+        }
+
+        function UpdateContact(id, contactMethod, contactDesc, contactImg) {
+            var formData = new FormData();
+            formData.append('contactId', id);
+            formData.append('contactMethod', contactMethod);
+            formData.append('contactDesc', contactDesc);
+            if (contactImg) {
+                formData.append('contactImg', contactImg);
+            }
+            $.ajax({
+                url: "/AdminManage/UpdateContact",
+                type: "POST",
+                data: formData,
+                processData: false,
+                contentType: false,
+                success: async function (data) {
+                    if (data.success) {
+                        window.location.reload();
+                    } else {
+                        await showAlert("Không cập nhật. vui lòng thử lại.", 'warning');
+                    }
+                },
+                error: async function (xhr, status, error) {
+                    await showAlert("Error", 'error');
+                }
+            });
+        }
+
+
+        function DeleteContact(id) {
+
+            var formData = new FormData();
+            formData.append('contactId', id);
+
+            $.ajax({
+                url: "/AdminManage/DeleteContactMethod",
+                type: "POST",
+                data: formData,
+                processData: false,
+                contentType: false,
+                success: async function (data) {
+                    if (data.success) {
+                        await showAlert('Xóa phương thức liên hệ thành công', 'success');
+                        setTimeout(function () {
+                            window.location.reload();
+                        }, 1500);
+                    } else {
+                        await showAlert("Không thể xóa. vui lòng thử lại.", 'warning');
+                    }
+                },
+                error: async function (xhr, status, error) {
+                    await showAlert("Error", 'error');
+                }
+            });
+        }
+
+
 
         const addSilderImg = document.getElementById('addSilderImg');
         const addSilderViewImg = document.getElementById('addSilderViewImg');
