Sửa hiện ra thông báo liên hện thành công cập nhật đã xong

--- a/ShoeShopProject/Views/ProductManage/SliderManageList.cshtml
+++ b/ShoeShopProject/Views/ProductManage/SliderManageList.cshtml
@@ -308,7 +308,10 @@
                 contentType: false,
                 success: async function (data) {
                     if (data.success) {
-                        window.location.reload();
+                        await showAlert('Cập nhật phương thức liên hệ thành công', 'success');
+                        setTimeout(function () {
+                            window.location.reload();
+                        }, 1500);
                     } else {
                         await showAlert("Không cập nhật. vui lòng thử lại.", 'warning');
                     }
@@ -467,6 +470,7 @@
                 contentType: false,
                 success: async function (data) {
                     if (data.success) {
+
                         window.location.reload();
                     } else {
                         await showAlert("Không cập nhật. vui lòng thử lại.", 'warning');
