--- a/ShoeShopProject/Views/Product/ProductDetails.cshtml
+++ b/ShoeShopProject/Views/Product/ProductDetails.cshtml
@@ -266,7 +266,7 @@
             return /^-?\d+$/.test(value);
         }
 
-        function ChangeQuantityValue(inputElement) {debugger
+        function ChangeQuantityValue(inputElement) {
             var quantity = inputElement.value;
             // Kiểm tra giá trị nhập liệu
             if (!isNumeric(quantity) || parseInt(quantity) < 0) {
